<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/fragment_all_payments" >

    <TextView
        android:id="@+id/payment_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".8"
        android:text="@string/payment_number"
        android:textAlignment="center"
        android:textSize="@dimen/all_payments_text_size" />

    <TextView
        android:id="@+id/principal_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/principal"
        android:textAlignment="center"
        android:textSize="@dimen/all_payments_text_size" />

    <TextView
        android:id="@+id/interest_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/interest"
        android:textAlignment="center"
        android:textSize="@dimen/all_payments_text_size" />

    <TextView
        android:id="@+id/balance_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/balance"
        android:textAlignment="center"
        android:textSize="@dimen/all_payments_text_size" />
</LinearLayout>
